unpackaged/main/default/objects/Account/fields/CustomerPriority__c.field-meta.xml
<CustomField>
	<fullName>CustomerPriority__c</fullName>
	<label>Customer Priority</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>High</fullName>
			</value>
			<value>
				<fullName>Low</fullName>
			</value>
			<value>
				<fullName>Medium</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>