unpackaged/main/default/objects/Account/fields/SLAExpirationDate__c.field-meta.xml
<CustomField>
	<fullName>SLAExpirationDate__c</fullName>
	<label>SLA Expiration Date</label>
	<type>Date</type>
</CustomField>