unpackaged/main/default/objects/Account/fields/SLASerialNumber__c.field-meta.xml
<CustomField>
	<fullName>SLASerialNumber__c</fullName>
	<label>SLA Serial Number</label>
	<length>10</length>
	<type>Text</type>
</CustomField>