unpackaged/main/default/objects/Account/fields/UpsellOpportunity__c.field-meta.xml
<CustomField>
	<fullName>UpsellOpportunity__c</fullName>
	<label>Upsell Opportunity</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>Maybe</fullName>
			</value>
			<value>
				<fullName>No</fullName>
			</value>
			<value>
				<fullName>Yes</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>