unpackaged/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
	<fullName>AllAccounts</fullName>
	<filterScope>Everything</filterScope>
	<label>All Accounts</label>
</ListView>