unpackaged/main/default/objects/Account/listViews/NewLastWeek.listView-meta.xml
<ListView>
	<fullName>NewLastWeek</fullName>
	<filterScope>Everything</filterScope>
	<filters>
		<field>ACCOUNT.CREATED_DATE</field>
		<operation>equals</operation>
		<value>LAST_WEEK</value>
	</filters>
	<label>New Last Week</label>
</ListView>