unpackaged/main/default/objects/Account/listViews/PlatinumandGoldSLACustomers.listView-meta.xml
<ListView>
	<fullName>PlatinumandGoldSLACustomers</fullName>
	<columns>ACCOUNT.NAME</columns>
	<columns>ACCOUNT.SITE</columns>
	<columns>ACCOUNT.ADDRESS1_STATE</columns>
	<columns>ACCOUNT.PHONE1</columns>
	<columns>CORE.USERS.ALIAS</columns>
	<filterScope>Everything</filterScope>
	<label>Platinum and Gold SLA Customers</label>
</ListView>